--- a/src/app/home/local-bot/local-bot.component.html
+++ b/src/app/home/local-bot/local-bot.component.html
@@ -1,7 +1,9 @@
 <div class="bg-light w-100 h-100 vh-100">
   <div class="default-loader d-flex justify-content-center w-100 h-100" *ngIf="showLazyLoader">
     <div class="align-self-center text-center">
-      <span class="fa fa-spinner fa-pulse fa-3x"></span>
+      <div class="spinner-border text-dark" role="status">
+        <span class="sr-only">Processing...</span>
+      </div>
       <div class="text-secondary mt-2">Processing...</div>
     </div>
   </div>
