--- a/src/app/home/control-panel/user-group/user-group.component.html
+++ b/src/app/home/control-panel/user-group/user-group.component.html
@@ -6,8 +6,8 @@
     <div class="text-secondary mt-2">Processing...</div>
   </div>
 </div>
-<div class="group-page d-flex flex-column bg-light-gray">
-  <div class="options d-flex justify-content-between align-items-center w-100 px-4">
+<div class="group-page d-flex flex-column bg-light-gray page-padding">
+  <div class="options d-flex justify-content-between align-items-center w-100 pt-2 pb-4">
     <div class="font-22">
       <span class="fw-600 mr-2">Groups</span>
       <span>({{totalRecords - 1}})</span>
@@ -22,7 +22,7 @@
   </div>
 
   <div class="scroll-pane">
-    <div class="list-group mx-4 mb-4">
+    <div class="list-group mb-3">
       <div class="list-group-item header py-0 bg-light text-muted text-uppercase font-13">
         <div class="d-flex align-items-center justify-content-between h-100">
           <div class="group-name">Group Name</div>
