--- a/src/app/home/schema-utils/manage-permissions/manage-permissions.component.scss
+++ b/src/app/home/schema-utils/manage-permissions/manage-permissions.component.scss
@@ -11,22 +11,22 @@
   min-height: 80px;
 }
 
-.description{
+.description {
   padding: 0.25rem 1.4rem 0.25rem 0.9rem !important;
 
   &::-webkit-scrollbar {
     width: 7px;
   }
-  
+
   /* Track */
-  
+
   &::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px grey;
     border-radius: 5px;
   }
-  
+
   /* Handle */
-  
+
   &::-webkit-scrollbar-thumb {
     background: #999ea3;
     border-radius: 5px;
@@ -39,23 +39,28 @@
   min-height: 36px;
   max-height: 36px;
   border-left: 5px solid transparent;
+
   &.active {
     border-left-color: $dark;
   }
+
   .icon {
     min-width: 14px;
     max-width: 14px;
     min-height: 14px;
     max-height: 14px;
   }
+
   .error-icon {
     right: 5px;
     top: 9px;
   }
+
   .searching-relation {
     right: 4px;
     top: 7px;
   }
+
   .type-icon-holder {
     min-width: 28px;
     max-width: 28px;
@@ -73,6 +78,7 @@
   overflow-y: auto;
   height: calc(100vh - 205px);
 }
+
 .field-toggle-state {
   min-width: 20px;
   width: 20px;
@@ -83,15 +89,17 @@
   min-width: 200px;
   max-width: 200px;
 }
+
 .role-control {
-  min-width: 600px;
-  max-width: 600px;
+  min-width: 250px;
+  max-width: 250px;
 }
 
 .role-control-right {
   min-width: 400px;
   max-width: 400px;
 }
+
 .switch-card {
   min-width: 220px;
   max-width: 220px;
@@ -111,23 +119,26 @@
   min-width: 500px;
   max-width: 500px;
 }
+
 .role-list {
   overflow-y: auto;
   min-height: calc(100vh - 249px);
   max-height: calc(100vh - 249px);
 }
+
 .roles-list {
   min-width: 250px;
   max-width: 250px;
 }
+
 .roles-list-item {
-  min-height: 68px;
-  max-height: 68px;
-  border-left: 5px solid $white;
+
   &.active {
-    border-left: 5px solid $dark;
-    background-color: $light !important;
+
+    color: $headings  !important;
+    font-weight: 700 !important;
   }
+
   .symbol-holder {
     min-width: 50px;
     max-width: 50px;
@@ -137,12 +148,15 @@
 .color-create {
   color: #01a7c2;
 }
+
 .color-edit {
   color: #fba200;
 }
+
 .color-delete {
   color: #bd0404;
 }
+
 .color-approve {
   color: #5733ff;
 }
@@ -162,6 +176,7 @@ textarea {
   max-height: 16px;
   min-width: 16px;
   min-height: 16px;
+
   .fa {
     font-size: 10px;
   }
@@ -191,19 +206,24 @@ textarea {
   width: calc(100vw - 510px);
   min-height: 300px;
   overflow-x: auto;
+
   .rule-block {
     transition: 0.25s;
     outline: 0;
     width: fit-content;
+
     &.focus {
       background: rgba($accent, 0.24);
+
       .badge-light {
         background: #fff !important;
         color: #000 !important;
       }
     }
+
     .rule-block-gutter {
       min-width: 43px;
+
       .gutter-16 {
         min-height: 16px;
         max-height: 16px;
@@ -215,9 +235,11 @@ textarea {
 .tab-container {
   min-height: 500px;
 }
+
 .tab-list {
   min-height: 32px;
   max-height: 32px;
+
   .tab {
     min-height: 32px;
     max-height: 32px;
@@ -225,7 +247,7 @@ textarea {
   }
 }
 
-.add-step{
+.add-step {
   min-width: 60px;
 }
 
