--- a/src/styles.scss
+++ b/src/styles.scss
@@ -948,3 +948,7 @@ $odp-ui-author-theme: mat-light-theme((color: (primary: $odp-ui-author-primary,
 .icon-primary {
   color: $orange
 }
+
+.center-h {
+  margin: auto 0;
+}
