--- a/src/app/home/insight/api-logs/api-logs.component.html
+++ b/src/app/home/insight/api-logs/api-logs.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="grid-container">
         <ag-grid-angular #agGrid class="ag-theme-balham border-0" [frameworkComponents]="frameworkComponents"
-            [gridOptions]="gridOptions" [datasource]="dataSource">
+            [gridOptions]="gridOptions" rowHeight="48" [datasource]="dataSource">
         </ag-grid-angular>
     </div>
 
