--- a/src/app/home/insight/insight.component.html
+++ b/src/app/home/insight/insight.component.html
@@ -1,32 +1,46 @@
-<div class="d-flex flex-column w-100 h-100 position-relative">
-    <odp-breadcrumb [paths]="breadcrumbPaths"></odp-breadcrumb>
-    <div class="d-felx justify-content-between mx-3">
-        <h4>Audit Logs</h4>
+<div class="default-loader d-flex justify-content-center w-100 h-100" *ngIf="showLazyLoader">
+    <div class="align-self-center text-center">
+        <div class="spinner-border text-dark" role="status">
+            <span class="sr-only">Processing...</span>
+        </div>
+        <div class="text-secondary mt-2">Processing...</div>
     </div>
-    <div class="tabs d-flex align-items-center border-bottom mx-3" id="sbTabs">
-        <div class="text-dark px-3 py-2 hover" *ngIf="hasDsPermission" (click)="activateTab(0)" [ngClass]="{'active':activeTab==0}">
-            <span>Data Services</span>
-        </div>
-        <div class="text-dark px-3 py-2 hover"  *ngIf="hasDsPermission"(click)="activateTab(1)" [ngClass]="{'active':activeTab==1}">
-            <span>Integration</span>
-        </div>
-        <div class="text-dark px-3 py-2 hover" *ngIf="hasUserPermission" (click)="activateTab(2)" [ngClass]="{'active':activeTab==2}">
-            <span>Users</span>
-        </div>
-        
-        <div class="text-dark px-3 py-2 hover" *ngIf="experimentalFeatures && hasUserPermission" (click)="activateTab(3)" [ngClass]="{'active':activeTab==3}">
-            <span>Bots</span>
-        </div>
-       
-        <div class="text-dark px-3 py-2 hover" *ngIf="hasGroupsPermission "  (click)="activateTab(4)" [ngClass]="{'active':activeTab==4}">
-            <span>Groups</span>
-        </div>
+</div>
+<div class="d-flex flex-column w-100 h-100 position-relative page-padding bg-light-gray">
+    <div class="d-flex justify-content-between pt-2 pb-4">
+        <span class="fw-600 font-22">Audit Logs</span>
     </div>
-    <div class="d-flex flex-column h-100 w-100 px-3">
-        <odp-api-logs *ngIf="activeTab==0"></odp-api-logs>
-        <odp-dataservice-logs *ngIf="activeTab==1"></odp-dataservice-logs>
-        <odp-user-logs *ngIf="activeTab==2"></odp-user-logs>
-        <odp-bots-logs *ngIf="activeTab==3"></odp-bots-logs>
-        <odp-group-logs *ngIf="activeTab==4"></odp-group-logs>
+    <div class="border rounded-lg bg-white">
+        <div class="tabs d-flex align-items-center border-bottom mx-3" id="sbTabs">
+            <div class="text-dark px-3 py-2 hover" *ngIf="hasDsPermission" (click)="activateTab(0)"
+                [ngClass]="{'active':activeTab==0}">
+                <span>Data Services</span>
+            </div>
+            <div class="text-dark px-3 py-2 hover" *ngIf="hasDsPermission" (click)="activateTab(1)"
+                [ngClass]="{'active':activeTab==1}">
+                <span>Integration</span>
+            </div>
+            <div class="text-dark px-3 py-2 hover" *ngIf="hasUserPermission" (click)="activateTab(2)"
+                [ngClass]="{'active':activeTab==2}">
+                <span>Users</span>
+            </div>
+
+            <div class="text-dark px-3 py-2 hover" *ngIf="experimentalFeatures && hasUserPermission"
+                (click)="activateTab(3)" [ngClass]="{'active':activeTab==3}">
+                <span>Bots</span>
+            </div>
+
+            <div class="text-dark px-3 py-2 hover" *ngIf="hasGroupsPermission " (click)="activateTab(4)"
+                [ngClass]="{'active':activeTab==4}">
+                <span>Groups</span>
+            </div>
+        </div>
+        <div class="d-flex flex-column h-100 w-100 px-3">
+            <odp-api-logs *ngIf="activeTab==0"></odp-api-logs>
+            <odp-dataservice-logs *ngIf="activeTab==1"></odp-dataservice-logs>
+            <odp-user-logs *ngIf="activeTab==2"></odp-user-logs>
+            <odp-bots-logs *ngIf="activeTab==3"></odp-bots-logs>
+            <odp-group-logs *ngIf="activeTab==4"></odp-group-logs>
+        </div>
     </div>
 </div>
