--- a/src/app/home/insight/user-logs/user-logs.component.html
+++ b/src/app/home/insight/user-logs/user-logs.component.html
@@ -10,6 +10,6 @@
     </div>
 </div>
 <div class="grid-container mt-2">
-    <ag-grid-angular #agGrid class="ag-theme-balham border-0" [gridOptions]="gridOptions" [datasource]="dataSource">
+    <ag-grid-angular #agGrid class="ag-theme-balham border-0" [gridOptions]="gridOptions" rowHeight="48" [datasource]="dataSource">
     </ag-grid-angular>
 </div>
