--- a/src/app/admin/user-list/user-list.component.html
+++ b/src/app/admin/user-list/user-list.component.html
@@ -36,7 +36,7 @@
         <div class="btn-group">
           <button type="button" class="add-new btn btn-primary d-flex align-items-center justify-content-center" (click)="newUser()">
             <span class="dsi dsi-plus mr-2"></span>
-            <span class="text">Add User</span>
+            <span class="text">Create User</span>
           </button>
         </div>
       </div>
