--- a/src/app/admin/app-list/app-list.component.html
+++ b/src/app/admin/app-list/app-list.component.html
@@ -110,7 +110,7 @@
   class="new-app-window position-fixed p-4 d-flex flex-column bg-white border-left">
   <div class="d-flex flex-column w-100">
     <div class="d-flex align-items-center justify-content-between mb-5">
-      <span class="font-20 fw-600">Create New App</span>
+      <span class="font-20 fw-600">New App</span>
       <span class="fa fa-times text-muted hover" (click)="!createAppLoader && showNewAppWindow=false"></span>
     </div>
     <div class="d-flex flex-column w-100" [formGroup]="form">
