structure properties icons added

--- a/src/app/utils/field-type/field-type.component.html
+++ b/src/app/utils/field-type/field-type.component.html
@@ -5,7 +5,7 @@
     <ng-container *ngIf="collectionType">
         <span class="text-dark mx-2">of</span>
         <span
-        class="{{collectionClass}} rounded-circled-flex align-items-center justify-content-center field-type-badge"></span>
+        class="dsi dsi-bg dsi-sm rounded-circle {{collectionClass}} rounded-circle d-flex align-items-center justify-content-center field-type-badge"></span>
         <span *ngIf="label" class="text-dark ml-2">{{collectionType}}</span>
     </ng-container>
 </div>
