--- a/src/assets/scss/bootstrap/_variables.scss
+++ b/src/assets/scss/bootstrap/_variables.scss
@@ -50,6 +50,9 @@ $create:    #1CAD49 !default;
 $modify:    #202A36 !default;
 $delete:    #DD5151 !default;
 $rework:    #FBA200 !default;
+$required: #E07A5F;
+$create-only: #3B97D2;
+$unique: #81B29A;
 
 $data-grid-options:   #F2F2F2 !default;
 $data-grid-header:    #ECECEC !default;
