--- a/src/app/utils/structure-field/structure-field.component.html
+++ b/src/app/utils/structure-field/structure-field.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column w-100">
-    <div class="field-wrapper d-flex align-items-center justify-content-between w-100 px-3 rounded"
-        [ngClass]="{'active bg-light':active}" [formGroup]="form" >
-        <div class="d-flex align-items-center" formGroupName="properties">
+    <div class="field-wrapper row d-flex align-items-center justify-content-between w-100 px-3 rounded"
+        [ngClass]="{'active bg-light':active}" [formGroup]="form">
+        <div class="d-flex col-3 align-items-center" formGroupName="properties">
             <span class="spacer border-right border-secondary" [ngStyle]="getSpacing()"></span>
             <span class="icon mr-2">
                 <span class="fa fa-bars text-muted hover" *ngIf="!idField && edit.status && type!=='internal'"></span>
@@ -14,14 +14,14 @@
                     *ngIf="form.get('properties.required') && form.get('properties.required').value"></span>
             </span>
             <div class="input-control position-relative mr-3">
-                <span class="d-flex align-items-center field form-control-plaintext word-elipsis" *ngIf="!edit.status || type==='internal'"
-                    [ngbTooltip]="form.get('properties.name').value"
+                <span class="d-flex align-items-center field form-control-plaintext word-elipsis"
+                    *ngIf="!edit.status || type==='internal'" [ngbTooltip]="form.get('properties.name').value"
                     #tooltip="ngbTooltip">{{form.get('properties.name').value}}</span>
-                <input #inputField *ngIf="edit.status && type!=='internal'" placement="top"
-                    [ngbTooltip]="tipContent" #tooltip="ngbTooltip" triggers="manual"
-                    (blur)="checkType(inputField.value);searchService();" (keyup.enter)="addField()"
-                    (shift.delete)="deleteField($event)" type="text" class="field" formControlName="name"
-                    (paste)="pasteOnField($event)" [attr.placeholder]="placeholder" [attr.id]="fieldId"
+                <input #inputField *ngIf="edit.status && type!=='internal'" placement="top" [ngbTooltip]="tipContent"
+                    #tooltip="ngbTooltip" triggers="manual" (blur)="checkType(inputField.value);searchService();"
+                    (keyup.enter)="addField()" (shift.delete)="deleteField($event)" type="text" class="field mr-2"
+                    formControlName="name" (paste)="pasteOnField($event)" [attr.placeholder]="placeholder"
+                    [attr.id]="fieldId"
                     [ngClass]="{'form-control-plaintext':!active,'form-control':active, 'is-invalid pl-2': hasError}"
                     odpKeyStrokes (shift.enter)="addField(true)">
                 <span class="dsi dsi-danger-circle text-danger position-absolute error-icon" *ngIf="hasError"
@@ -31,12 +31,27 @@
                 <!-- <div class="" id="tooltip" placement="top" [ngbTooltip]="tipContent" #tooltip="ngbTooltip"
                     triggers="manual"></div> -->
             </div>
+
+        </div>
+        <div class="col-3">
             <odp-field-type [field]="field" label="true"></odp-field-type>
             <a class='state-model hover' (click)='_viewStateModel(true)' *ngIf='checkStateModel()'>
                 State Model
             </a>
         </div>
-        <div class="d-flex field-options">
+        <div class="col-3 d-flex justify-content-start">
+            <span
+                class="ml-2 rounded-circle properties required d-flex justify-content-center align-items-center text-white fw-500 font-12"
+                *ngIf="form.get('properties.required') && form.get('properties.required').value">R</span>
+            <span
+                class="ml-2 rounded-circle properties create-only d-flex justify-content-center align-items-center text-white fw-500 font-12"
+                *ngIf="form.get('properties.createOnly') && form.get('properties.createOnly').value">C</span>
+            <span
+                class="ml-2 rounded-circle properties unique d-flex justify-content-center align-items-center text-white fw-500 font-12"
+                *ngIf="form.get('properties.unique') && form.get('properties.unique').value">U</span>
+
+        </div>
+        <div class="d-flex col-3 field-options">
             <div class="readonly d-flex align-items-center justify-content-center rounded-circle mr-2 hover"
                 [ngClass]="{'active':form.get('properties.readonly')?.value}" placement="top"
                 ngbTooltip="Mark as read-only" (click)="setReadOnly(form.get('properties.readonly'))"
@@ -51,7 +66,8 @@
             && form.get('type').value !== 'Object') && form.get('properties.readonly')?.value &&  !edit.status && type!=='internal' && !isDataFormat && !checkStateModel()">
                 <span class="odp-no-edit"></span>
             </div>
-            <span *ngIf="edit.status && type!=='internal'" class="dsi dsi-edit text-secondary hover mr-4" (click)="activateProperty()"> </span>
+            <span *ngIf="edit.status && type!=='internal'" class="dsi dsi-edit text-secondary hover mr-4"
+                (click)="activateProperty()"> </span>
             <span *ngIf="canDelete && edit.status && type!=='internal'" class="dsi dsi-trash text-secondary hover"
                 (click)="remove()"></span>
         </div>
