--- a/src/styles.scss
+++ b/src/styles.scss
@@ -98,6 +98,10 @@ $odp-ui-author-theme: mat-light-theme((color: (primary: $odp-ui-author-primary,
   }
 }
 
+.mt-40 {
+  margin-top: 40px;
+}
+
 .font-22 {
   font-size: 22px;
 }
