--- a/src/app/home/global-schemas/global-schemas.component.html
+++ b/src/app/home/global-schemas/global-schemas.component.html
@@ -11,7 +11,7 @@
         <odp-basic-info hideLogo="true" [(name)]="name" [(description)]="description" [edit]="edit">
             <div class="d-flex justify-content-end align-items-center">
                 <button (click)="cancel()" type="button"
-                    class="edit-button btn btn-min-width btn-outline-light border text-secondary mr-3"
+                    class="edit-button btn btn-min-width btn-light border mr-3"
                     id="sbButtonCancel">
                     <span class="text">Cancel</span>
                 </button>
