--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-members/user-group-bots/user-group-bots.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-members/user-group-bots/user-group-bots.component.html
@@ -13,7 +13,7 @@
       </div> -->
 		</div>
 		<div class="d-flex align-items-center">
-			<button *ngIf="selectedUsers.length>0" type="button" class="btn btn-outline-light border text-danger mr-3"
+			<button *ngIf="selectedUsers.length>0" type="button" class="btn btn-light border text-danger mr-3"
 				(click)="removeUsers()">
 				<span class="dsi dsi-trash" [ngbTooltip]="'Remove Bots '+ selectedUsers.length"></span>
 			</button>
