alignment changes design tab

--- a/src/app/utils/basic-info/basic-info.component.html
+++ b/src/app/utils/basic-info/basic-info.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper d-flex align-items-start justify-content-between">
+<div class="wrapper d-flex align-items-center justify-content-between">
   <div class="left-side w-100 d-flex">
     <div class="title-container">
       <div class="name-holder d-flex align-items-center">
