--- a/src/app/utils/structure-field-properties/structure-field-properties.component.html
+++ b/src/app/utils/structure-field-properties/structure-field-properties.component.html
@@ -181,7 +181,7 @@
 
 
           <div *ngIf="!idField" class="d-flex w-100 mt-4">
-            <div class=" text-secondary">Custom Label</div>
+            <div class=" text-secondary">Appcenter Custom Label</div>
             <div >
               <input *ngIf="edit.status" class="form-control" type="text" formControlName="label" id="label">
               <span *ngIf="!edit.status">{{formItem.get('properties.label').value}}</span>
@@ -194,7 +194,7 @@
             </span>
           </div>
           <div *ngIf="!idField" class="d-flex w-100 mt-4">
-            <div class=" text-secondary">Custom Error</div>
+            <div class=" text-secondary">Appcenter Custom Error</div>
             <div >
               <input *ngIf="canEdit" class="form-control" type="text" formControlName="errorMessage" id="errorMessage"
                 [attr.disabled]="(checkStateModel() || (formItem.get('type').value =='Boolean')) ? true : null">
@@ -486,7 +486,7 @@
 
 
           <div *ngIf="!idField" class=" w-100 mt-4">
-            <div class="font-14 text-dark mb-2">Custom Label</div>
+            <div class="font-14 text-dark mb-2">Appcenter Custom Label</div>
             <div>
               <input *ngIf="edit.status" class="form-control" type="text" formControlName="label" id="label">
               <span *ngIf="!edit.status">{{formItem.get('properties.label').value}}</span>
@@ -499,7 +499,7 @@
             </span>
           </div>
           <div *ngIf="!idField" class="w-100 mt-4">
-            <div class="font-14 text-dark mb-2">Custom Error</div>
+            <div class="font-14 text-dark mb-2">Appcenter Custom Error</div>
             <div>
               <input *ngIf="canEdit" class="form-control" type="text" formControlName="errorMessage" id="errorMessage"
                 [attr.disabled]="(checkStateModel() || (formItem.get('type').value =='Boolean')) ? true : null">
