--- a/src/app/utils/structure-field-properties/text-property/text-property.component.html
+++ b/src/app/utils/structure-field-properties/text-property/text-property.component.html
@@ -2,7 +2,7 @@
 
   <div class="d-flex w-100  flex-column mb-4" *ngIf="form.get('properties.default') && !form.get('properties.longText')?.value &&
     !form.get('properties.richText')?.value && !isLibrary && !isDataFormat">
-    <div >
+    <div>
       <div class="font-14 text-dark mb-2">Default Value
       </div>
       <div class=" position-relative">
@@ -15,7 +15,7 @@
             [ngClass]="{'is-invalid':form.get('properties.default').hasError('DefaultEmail')}" formControlName="default"
             id="_default" placeholder="Default Value email"
             (blur)="validateEmail('DefaultEmail',form.get('properties.default').value,form.get('properties'))">
-          <div  *ngIf=" form.get('properties._detailedType').value === 'enum'">
+          <div *ngIf=" form.get('properties._detailedType').value === 'enum'">
             <select class="form-control" formControlName="default" (change)="changeDefault($event)"
               [attr.disabled]="checkStateModel() ? '' : null">
               <option [value]=null selected>Select Value</option>
@@ -31,7 +31,7 @@
     </div>
 
     <div>
-      <div ></div>
+      <div></div>
       <div class="ml-2">
         <span class="text-danger" *ngIf="form.get('properties.default').hasError('minlength')"><span
             class="fa fa-times mr-1"></span>{{form.get('properties.name').value}}
@@ -87,7 +87,7 @@
           form.get('properties._detailedType').value === 'password')">
     <div class="position-relative ">
       <div class="font-14 text-dark mb-2">Pattern</div>
-      <div >
+      <div>
         <input *ngIf="canEdit" class="form-control" type="text" formControlName="pattern" id="_pattern"
           placeholder="Regular Expression"
           [ngClass]="{'is-invalid':form.get('properties.pattern').hasError('patternValidator')}"
@@ -196,14 +196,50 @@
     </button>
   </div>
   <ng-container *ngIf="formatType!='FLATFILE'">
-    <div class="d-flex flex-column w-100 mb-4 mt-4"
-      *ngIf="form.get('properties.minlength') && form.get('properties._detailedType').value==''">
-      <div class="d-flex flex-row mb-4">
-        <div class=" text-secondary">Length</div>
-        <div class=" text-accent">Min and max lengths of the value</div>
+    <div class="d-flex flex-column w-100 mt-4">
+      <div class="row no-gutters">
+        <div class="col-6">
+          <ng-container *ngIf="form.get('properties.minlength') && form.get('properties._detailedType').value==''">
+            <div class="mb-2">Min Length</div>
+            <input *ngIf="canEdit" class=" form-control short" placeholder="Minimum length"
+              [ngClass]="{'is-invalid':form.get('properties.minlength').dirty && form.hasError('minMaxLength')}"
+              type="text" min="0" #minlengthEle formControlName="minlength" id="_minLength"
+              (blur)="reCalibrateTextDefaultValue('minlength', form.get('properties.minlength').value, form.get('properties'))">
+            <span
+              *ngIf="!canEdit && form.get('properties.minlength') && form.get('properties.minlength').value">{{form.get('properties.minlength').value}}</span>
+            <span class="text-muted" *ngIf="!canEdit && !form.get('properties.minlength').value">-</span>
+          </ng-container>
+        </div>
+        <div class="col-6">
+          <ng-container *ngIf="form.get('properties.maxlength') && form.get('properties._detailedType').value==''">
+            <div class="mb-2">Max Length</div>
+            <input *ngIf="canEdit" class=" form-control short mb-2" placeholder="Maximum length"
+              [ngClass]="{'is-invalid':form.get('properties.maxlength').dirty && form.hasError('minMaxLength')}"
+              type="text" min="0" #maxlengthEle formControlName="maxlength" id="_maxLength"
+              (blur)="reCalibrateTextDefaultValue('maxlength', form.get('properties.maxlength').value, form.get('properties'))">
+            <span
+              *ngIf="!canEdit && form.get('properties.maxlength') && form.get('properties.maxlength').value">{{form.get('properties.maxlength').value}}</span>
+            <span class="text-muted" *ngIf="!canEdit && !form.get('properties.maxlength').value">-</span>
+          </ng-container>
+
+        </div>
+        <div class="col-12 mt-2">
+          <div class="font-12 text-secondary mb-2"
+            *ngIf="form.get('properties.minlength') && form.get('properties.maxlength') && form.get('properties._detailedType').value==''">
+            Min and max length of the attribute</div>
+          <div class="font-12 text-danger"
+            *ngIf="form.get('properties.minlength').dirty && form.get('properties').hasError('minMaxLength')"><span
+              class="fa fa-times mr-1"></span>Min
+            Length value cannot be greater then Max Length value</div>
+        </div>
+        <div class="font-12 text-danger"
+          *ngIf="form.get('properties.maxlength').dirty && form.get('properties').hasError('minMaxLength')"><span
+            class="fa fa-times mr-1"></span>Max
+          Length value cannot be lesser then Min Length value</div>
       </div>
-      <div class="border-left d-flex flex-column">
-        <div class="ml-2 pl-2 mb-3 mt-2 d-flex flex-column position-relative">
+
+      <!-- <div >
+        <div class="d-flex position-relative">
           <div class="d-flex">
             <div class="sub-level-width text-secondary">Min.</div>
             <input *ngIf="canEdit" class=" form-control short" placeholder="Minimum length"
@@ -242,7 +278,7 @@
               Length value cannot be lesser then Min Length value</span>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </ng-container>
 </div>
